EXTRA_DIST =

TESTS = tests/run-decisiondiagramplugin-tests.sh
TESTS_ENVIRONMENT = DLVHEX=dlvhex DOTCONVERTER=$(top_srcdir)/dotconverter/src/dotconverter RPCOMPILER=rpcompiler CMPSCRIPT=$(top_srcdir)/examples/compare.sh TESTDIR=$(top_srcdir)/examples/tests DLVHEXPARAMETERS="--plugindir=$(top_builddir)/src --operatorpath=$(top_builddir)/src/.libs/"
