bin_PROGRAMS = dnafeatureextractor
dnafeatureextractor_SOURCES = DNAFeatureExtractor.cpp features/f1.cpp features/f2.cpp features/f3.cpp features/f4.cpp features/f5.cpp features/f6.cpp features/f7.cpp features/f8.cpp features/f9.cpp features/f10.cpp features/f11.cpp features/f12.cpp features/f13.cpp features/f14.cpp features/f15.cpp features/f16.cpp features/f17.cpp features/f18.cpp features/f19.cpp features/f20.cpp

AM_YFLAGS = -d
AM_CPPFLAGS = \
	-I$(top_srcdir)/include

AM_LDFLAGS =
